# module-mcp

./: pyproject.toml
src/mcp_server/: main.py
src/mcp_server/services/: applications.py  credentials.py  environments.py  pipelines.py  projects.py  servers.py  static.py  utils.py
